--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -67,3 +67,10 @@ jobs:
       shell: bash
       # Execute the build.  You can specify a specific target with "--target <NAME>"
       run: cmake --build . --config $BUILD_TYPE --parallel $(nproc)
+
+    - name: upload results
+      uses: actions/upload-artifact@v4
+      with:
+        name: default_variant
+        path: ${{github.workspace}}/pico-examples/build
+        if-no-files-found: warn
