--- a/.github/workflows/macOS.yml
+++ b/.github/workflows/macOS.yml
@@ -1,11 +1,11 @@
 name: Build on macOS
 on:
   workflow_dispatch:
-  push:
-    branches:
-      - 'test_workflow'
-      - 'develop'
-      - 'master'
+  # push:
+  #   branches:
+  #     - 'test_workflow'
+  #     - 'develop'
+  #     - 'master'
 
 jobs:
   build:
