--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,16 +61,13 @@ endfunction()
 # Add blink example
 add_subdirectory_exclude_platforms(blink)
 
-# Add hello world example
-add_subdirectory_exclude_platforms(hello_world)
-
-add_compile_options(-Wall
-        -Wno-format          # int != int32_t as far as the compiler is concerned because gcc has int32_t as long int
-        -Wno-unused-function # we have some for the docs that aren't called
-        )
-if (CMAKE_C_COMPILER_ID STREQUAL "GNU")
-    add_compile_options(-Wno-maybe-uninitialized)
-endif()
+# add_compile_options(-Wall
+#         -Wno-format          # int != int32_t as far as the compiler is concerned because gcc has int32_t as long int
+#         -Wno-unused-function # we have some for the docs that aren't called
+#         )
+# if (CMAKE_C_COMPILER_ID STREQUAL "GNU")
+#     add_compile_options(-Wno-maybe-uninitialized)
+# endif()
 
 # Hardware-specific examples in subdirectories:
 # add_subdirectory(adc)
